--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,9 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>ようこそbookersへ</h1>
+<p>
+  bookersでは、さまざま書籍に関するあなたの意見や<br>
+  印象を共有し交換することができます
+</p>
+
+<span>
+  <%= link_to "start", "/books" %>
+</span>
