--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,12 +12,22 @@
     <%= link_to "Edit", edit_book_path(book.id) %>
   </span>
   <span>
-    <%= link_to "Destroy", "/books/#{book.id}" %>
+    <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
   </span>
 <br>
 <% end %>
 
 <h1>New book</h1>
+
+<% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <!-- form_with部分 -->
 <%= form_with model: @book do |f| %>
   <h4>Title</h4>
