--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,32 @@
 <h1>Books</h1>
 
-<p>Title</p><p>body</p>
-<% @books.each do |book| %>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-  <span><%= book.title %></span>
-  <span><%= book.body %></span>
-  <span>
-    <%= link_to "Show", "/books/#{book.id}" %>
-  </span>
-  <span>
-    <%= link_to "Edit", edit_book_path(book.id) %>
-  </span>
-  <span>
-    <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
-  </span>
-<br>
-<% end %>
-
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td>
+        <%= link_to "Show", "/books/#{book.id}" %>
+      </td>
+      <td>
+        <%= link_to "Edit", edit_book_path(book.id) %>
+      </td>
+      <td>
+        <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
 <h1>New book</h1>
 
 <% if @book.errors.any? %>
