--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,11 +2,12 @@
   <%= flash[:notice] %>
 </div>
 
-<h2>Title:</h2>
-<p><%= @book.title %></p>
 
-<h2>Body:</h2>
-<p><%= @book.body %></p>
+<p>Title: <%= @book.title %></p>
+
+
+<p>Body: <%= @book.body %></p>
 
 <%= link_to "Edit", edit_book_path(@book.id) %>
+|
 <%= link_to "Back", "/books" %>
