--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,8 @@
 <h1>ようこそbookersへ</h1>
 <p>
-  bookersでは、さまざま書籍に関するあなたの意見や<br>
+  Bookersでは、さまざま書籍に関するあなたの意見や
+</p>
+<p>
   印象を共有し交換することができます
 </p>
 
